--- a/index.html
+++ b/index.html
@@ -1,45 +1,137 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>자쿠드 숭배 - 메인</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>자쿠드</title>
 <style>
-:root{--bg:#0b0b12;--card:#0f1724;--accent:#ffd166}
-body{margin:0;font-family:Inter,system-ui,Arial,sans-serif;background:var(--bg);color:#e6eef8}
-.wrap{max-width:900px;margin:40px auto;padding:28px;background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent);border-radius:12px}
-h1{margin:0 0 12px 0;font-size:28px;color:var(--accent)}
-p{line-height:1.6}
-.actions{margin-top:20px}
-a.btn{display:inline-block;padding:10px 16px;border-radius:8px;background:var(--accent);color:#071018;text-decoration:none;font-weight:600}
-footer{margin-top:36px;font-size:13px;opacity:0.75}
+:root{
+  --bg:#ffffff;
+  --line:#e5e7eb;
+  --accent:#2563eb;
+  --text:#111827;
+  --muted:#6b7280;
+}
+
+body{
+  margin:0;
+  font-family:system-ui,-apple-system,Segoe UI,Roboto;
+  color:var(--text);
+}
+
+/* ===== HEADER ===== */
+.header{
+  position:sticky;
+  top:0;
+  z-index:1000;
+  background:var(--bg);
+  border-bottom:1px solid var(--line);
+}
+
+/* 1행 */
+.header-top{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding:12px 20px;
+}
+
+.brand{
+  display:flex;
+  align-items:center;
+  gap:10px;
+  text-decoration:none;
+  color:var(--text);
+}
+
+.brand img{
+  width:36px;
+  height:36px;
+}
+
+.brand span{
+  font-size:20px;
+  font-weight:800;
+}
+
+.user{
+  display:flex;
+  align-items:center;
+  gap:14px;
+  font-size:14px;
+}
+
+.user .title{
+  color:var(--muted);
+}
+
+.user .sp{
+  font-weight:700;
+  color:var(--accent);
+}
+
+.user button{
+  padding:6px 12px;
+  border:0;
+  border-radius:20px;
+  background:#111827;
+  color:white;
+  cursor:pointer;
+}
+
+/* 2행 */
+.header-nav{
+  display:flex;
+  gap:20px;
+  padding:10px 20px;
+  border-top:1px solid var(--line);
+}
+
+.header-nav a{
+  text-decoration:none;
+  color:var(--muted);
+  font-weight:600;
+}
+
+.header-nav a.active{
+  color:var(--accent);
+}
+
+/* ===== CONTENT ===== */
+main{
+  padding:40px 20px;
+}
 </style>
 </head>
 <body>
-<div class="wrap">
-<h1>왜 자쿠드를 숭배해야 하는가</h1>
-<p>
-(여기에 숭배글을 넣어라.)
-짧게 핵심을 정리하자면:
-</p>
-<ul>
-<li>자쿠드는 질서와 미학의 상징이다.</li>
-<li>그 존재는 플레이어의 길잡이이자 목적이다.</li>
-<li>숭배는 커뮤니티 결속과 성취를 만들어낸다.</li>
-</ul>
 
+<header class="header">
+  <!-- 1행 -->
+  <div class="header-top">
+    <a href="index.html" class="brand">
+      <!-- 로고 이미지 -->
+      <img src="logo.png" alt="logo">
+      <span>자쿠드</span>
+    </a>
 
-<p>원문을 길게 쓰고 싶으면 이 영역을 편집해. 이미지나 링크도 넣어도 된다.</p>
+    <div class="user">
+      <span class="title">칭호</span>
+      <span class="name">닉네임</span>
+      <span class="sp">10,857 SP</span>
+      <button>로그아웃</button>
+    </div>
+  </div>
 
+  <!-- 2행 -->
+  <nav class="header-nav">
+    <a href="gacha.html" class="active">가챠</a>
+  </nav>
+</header>
 
-<div class="actions">
-<a class="btn" href="gacha.html">가챠 화면으로 이동</a>
-</div>
+<main>
+  <h1>메인 화면</h1>
+  <p>여기에 숭배글 내용.</p>
+</main>
 
-
-<footer>
-페이지는 정적이다. GitHub Pages에 업로드하면 바로 동작한다.
-</footer>
-</div>
 </body>
 </html>
