--- a/index.html
+++ b/index.html
@@ -1,137 +1,148 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>자쿠드</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>자쿠드 숭배 - 메인</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700;900&display=swap" rel="stylesheet">
+
 <style>
-:root{
-  --bg:#ffffff;
-  --line:#e5e7eb;
-  --accent:#2563eb;
-  --text:#111827;
-  --muted:#6b7280;
-}
+  html { font-size:150%; transition: background .18s, color .18s; }
+  :root{
+    /* 라이트 테마 변수 */
+    --bg: #f7fafc;
+    --card-bg: #ffffff;
+    --line: #e5e7eb;
+    --accent: #2563eb;
+    --text: #111827;
+    --muted: #6b7280;
+    --header-shadow: rgba(0,0,0,0.04);
+  }
 
-body{
-  margin:0;
-  font-family:system-ui,-apple-system,Segoe UI,Roboto;
-  color:var(--text);
-}
+  /* 다크 모드 변수 (html.dark 붙이면 사용) */
+  html.dark{
+    --bg: #071018;
+    --card-bg: #0b1724;
+    --line: #12202a;
+    --accent: #ffd166;
+    --text: #eaf6ff;
+    --muted: #9aa0ab;
+    --header-shadow: rgba(255,255,255,0.03);
+  }
 
-/* ===== HEADER ===== */
-.header{
-  position:sticky;
-  top:0;
-  z-index:1000;
-  background:var(--bg);
-  border-bottom:1px solid var(--line);
-}
+  body{
+    margin:0;
+    font-family:"Noto Sans KR",system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;
+    color:var(--text);
+    background:var(--bg);
+  }
 
-/* 1행 */
-.header-top{
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  padding:12px 20px;
-}
+  /* header */
+  .header{ position:sticky; top:0; z-index:1000; background:var(--card-bg); box-shadow:0 1px 0 var(--header-shadow); transition: background .18s, box-shadow .18s; }
+  .header-top{ display:flex; align-items:center; justify-content:space-between; padding:1rem 1.25rem; gap:1rem; }
+  .brand{ display:flex; align-items:center; gap:0.75rem; text-decoration:none; color:var(--text); }
+  .brand img{ width:3.375rem; height:3.375rem; object-fit:contain; border-radius:6px; }
+  .brand .title{ font-size:1.25rem; font-weight:900; letter-spacing:-0.02em; }
 
-.brand{
-  display:flex;
-  align-items:center;
-  gap:10px;
-  text-decoration:none;
-  color:var(--text);
-}
+  .user{ display:flex; align-items:center; gap:1rem; font-size:0.9375rem; }
 
-.brand img{
-  width:36px;
-  height:36px;
-}
+  .user .role{ color:var(--muted); font-weight:600; }
+  .user .name{ font-weight:800; }
+  .user .sp{ font-weight:800; color:var(--accent); padding:0.25rem 0.5rem; border-radius:0.5rem; background:transparent; border:1px solid rgba(0,0,0,0.04); }
+  html.dark .user .sp{ border:1px solid rgba(255,255,255,0.04); }
 
-.brand span{
-  font-size:20px;
-  font-weight:800;
-}
+  .user button{ padding:0.4rem 0.75rem; border:0; border-radius:0.5rem; background:var(--text); color:var(--card-bg); cursor:pointer; font-weight:700; }
 
-.user{
-  display:flex;
-  align-items:center;
-  gap:14px;
-  font-size:14px;
-}
+  /* theme switch */
+  .theme-wrap{ display:flex; align-items:center; gap:0.6rem; }
+  .theme-label{ font-size:0.85rem; color:var(--muted); }
+  .theme-switch{ position:relative; width:46px; height:26px; display:inline-block; }
+  .theme-switch input{ opacity:0; width:0; height:0; }
+  .slider{
+    position:absolute; cursor:pointer; inset:0; background:#cbd5e1; border-radius:30px; transition:background .18s;
+    box-shadow: inset 0 1px 2px rgba(0,0,0,0.08);
+  }
+  .slider:before{
+    content:""; position:absolute; left:3px; top:3px; width:20px; height:20px; background:white; border-radius:50%; transition:transform .18s;
+  }
+  input:checked + .slider{ background:linear-gradient(90deg,var(--accent), #ffb86b); }
+  input:checked + .slider:before{ transform: translateX(20px); }
 
-.user .title{
-  color:var(--muted);
-}
+  /* nav */
+  .header-nav{ display:flex; gap:1.25rem; padding:0.6rem 1.25rem; border-top:1px solid var(--line); }
+  .header-nav a{ text-decoration:none; color:var(--muted); font-weight:700; padding:0.35rem 0.5rem; border-radius:0.5rem; }
+  .header-nav a.active{ color:var(--accent); background: rgba(37,99,235,0.06); }
 
-.user .sp{
-  font-weight:700;
-  color:var(--accent);
-}
+  main{ max-width:960px; margin:2rem auto; padding:1.25rem; }
+  h1{ margin:0 0 0.5rem 0; font-size:1.625rem; color:var(--accent); }
+  p{ line-height:1.85; color:var(--text); margin:0 0 1rem 0; }
 
-.user button{
-  padding:6px 12px;
-  border:0;
-  border-radius:20px;
-  background:#111827;
-  color:white;
-  cursor:pointer;
-}
-
-/* 2행 */
-.header-nav{
-  display:flex;
-  gap:20px;
-  padding:10px 20px;
-  border-top:1px solid var(--line);
-}
-
-.header-nav a{
-  text-decoration:none;
-  color:var(--muted);
-  font-weight:600;
-}
-
-.header-nav a.active{
-  color:var(--accent);
-}
-
-/* ===== CONTENT ===== */
-main{
-  padding:40px 20px;
-}
+  /* 작은 화면 조정 */
+  @media(max-width:720px){
+    .user{ gap:0.6rem; font-size:0.85rem; }
+    .brand .title{ display:none; }
+  }
 </style>
 </head>
 <body>
-
 <header class="header">
-  <!-- 1행 -->
   <div class="header-top">
-    <a href="index.html" class="brand">
-      <!-- 로고 이미지 -->
-      <img src="logo.png" alt="logo">
-      <span>자쿠드</span>
+    <a class="brand" href="index.html">
+      <img src="https://ibb.co/ZrgK1DJ" alt="사이트 로고">
+      <span class="title">자쿠드</span>
     </a>
 
-    <div class="user">
-      <span class="title">칭호</span>
-      <span class="name">닉네임</span>
-      <span class="sp">10,857 SP</span>
-      <button>로그아웃</button>
+    <div style="display:flex;align-items:center;gap:1rem;">
+      <div class="theme-wrap" aria-hidden="false">
+        <span class="theme-label">다크</span>
+        <label class="theme-switch" title="다크 모드 토글" aria-label="다크 모드 토글">
+          <input id="themeToggle" type="checkbox" />
+          <span class="slider"></span>
+        </label>
+      </div>
+
+      <div class="user" role="navigation" aria-label="유저 정보">
+        <span class="role">칭호</span>
+        <span class="name">닉네임</span>
+        <span class="sp">10,857 SP</span>
+        <button type="button">로그아웃</button>
+      </div>
     </div>
   </div>
 
-  <!-- 2행 -->
-  <nav class="header-nav">
-    <a href="gacha.html" class="active">가챠</a>
+  <nav class="header-nav" aria-label="주요 메뉴">
+    <a href="index.html" class="active">메인</a>
+    <a href="gacha.html">가챠</a>
   </nav>
 </header>
 
 <main>
-  <h1>메인 화면</h1>
-  <p>여기에 숭배글 내용.</p>
+  <h1>왜 자쿠드를 숭배해야 하는가</h1>
+  <p>여기에 숭배글을 적어라. 다크 모드를 스위치로 켜고 끌 수 있다. 상태는 브라우저에 저장된다.</p>
+  <p>이미지·링크·긴 글 모두 넣어도 된다.</p>
 </main>
 
+<script>
+  // 테마 토글 로직: localStorage에 'theme' 저장 (값: 'dark'|'light')
+  (function(){
+    const toggle = document.getElementById('themeToggle');
+    const apply = (t) => {
+      if(t === 'dark') document.documentElement.classList.add('dark');
+      else document.documentElement.classList.remove('dark');
+      toggle.checked = (t === 'dark');
+    };
+
+    const saved = localStorage.getItem('theme');
+    const initial = saved || (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
+    apply(initial);
+
+    toggle.addEventListener('change', () => {
+      const next = toggle.checked ? 'dark' : 'light';
+      localStorage.setItem('theme', next);
+      apply(next);
+    });
+  })();
+</script>
 </body>
 </html>
