--- a/gacha.html
+++ b/gacha.html
@@ -3,84 +3,104 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>가챠</title>
+<title>자쿠드 숭배 - 메인</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700;900&display=swap" rel="stylesheet">
 
 <style>
-  html { font-size:150%; transition: background .18s, color .18s; }
+  /* UI 크기: 100% (이전 150%의 2/3) */
+  html { font-size:100%; transition: background .18s, color .18s; }
   :root{
-    --bg: #071018;
-    --card-bg: #ffffff;
-    --line: #eef2f7;
-    --accent: #ffd166;
-    --muted: #9aa0ab;
-    --card: #0f1b2a;
+    --bg:#f7fafc;
+    --card-bg:#ffffff;
+    --line:#e5e7eb;
+    --accent:#2563eb;
+    --accent-2:#ffb86b;
+    --text:#111827;
+    --muted:#6b7280;
     --header-shadow: rgba(0,0,0,0.04);
   }
-  /* index와 동일한 변수 구조, 다크는 반전(여기선 light가 기본이지만 html.dark 덮어씌움) */
   html.dark{
-    --bg: #071018;
-    --card-bg: #0b1724;
-    --line: #12202a;
-    --accent: #ffd166;
-    --muted: #9aa0ab;
-    --card: #0f1b2a;
+    --bg:#071018;
+    --card-bg:#0b1724;
+    --line:#12202a;
+    --accent:#ffd166;
+    --accent-2:#ffb86b;
+    --text:#eaf6ff;
+    --muted:#9aa0ab;
     --header-shadow: rgba(255,255,255,0.03);
   }
 
-  *{box-sizing:border-box}
-  body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);color:var(--text, #eaf6ff)}
+  body{
+    margin:0;
+    font-family:"Noto Sans KR",system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;
+    color:var(--text);
+    background:var(--bg);
+  }
 
-  /* header (같은 구조) */
-  .header{ position:sticky; top:0; z-index:1000; background:var(--card-bg); box-shadow:0 1px 0 var(--header-shadow); transition: background .18s, box-shadow .18s; color:var(--text, #111); }
-  .header-top{ display:flex; align-items:center; justify-content:space-between; padding:1rem 1.25rem; gap:1rem; }
-  .brand{ display:flex; align-items:center; gap:0.75rem; text-decoration:none; color:inherit; }
-  .brand img{ width:3.375rem; height:3.375rem; object-fit:contain; border-radius:6px; }
-  .brand .title{ font-size:1.25rem; font-weight:900; }
-  .user{ display:flex; align-items:center; gap:1rem; font-size:0.9375rem; }
-  .header-nav{ display:flex; gap:1.25rem; padding:0.6rem 1.25rem; border-top:1px solid var(--line); }
+  /* 헤더: 2단, 상단 고정 */
+  .header{ position:sticky; top:0; z-index:1000; background:var(--card-bg); box-shadow:0 1px 0 var(--header-shadow); transition:background .18s; }
+  .header-top{ display:flex; align-items:center; justify-content:space-between; padding:0.9rem 1.25rem; gap:0.75rem; }
+  .brand{ display:flex; align-items:center; gap:0.65rem; text-decoration:none; color:var(--text); }
+  .brand img{ width:3rem; height:3rem; object-fit:contain; border-radius:6px; }
+  .brand .title{ font-size:1.15rem; font-weight:900; letter-spacing:-0.02em; }
 
-  /* theme switch */
-  .theme-wrap{ display:flex; align-items:center; gap:0.6rem; }
+  .user{ display:flex; align-items:center; gap:0.9rem; font-size:0.92rem; }
+  .user .role{ color:var(--muted); font-weight:600; }
+  .user .name{ font-weight:800; }
+  .user .sp{ font-weight:800; color:var(--accent); padding:0.2rem 0.45rem; border-radius:0.45rem; border:1px solid rgba(0,0,0,0.04); background:transparent; }
+  html.dark .user .sp{ border:1px solid rgba(255,255,255,0.04); }
+
+  .user button{ padding:0.35rem 0.6rem; border:0; border-radius:0.45rem; background:var(--text); color:var(--card-bg); cursor:pointer; font-weight:700; }
+
+  /* 2번째 행: 네비 + 다크 스위치 (토글 이곳으로 이동) */
+  .header-nav{ display:flex; align-items:center; justify-content:space-between; gap:0.5rem; padding:0.5rem 1.25rem; border-top:1px solid var(--line); }
+  .nav-left{ display:flex; gap:0.9rem; align-items:center; }
+  .nav-left a{ text-decoration:none; color:var(--muted); font-weight:700; padding:0.35rem 0.6rem; border-radius:0.45rem; }
+  .nav-left a.active{ color:var(--accent); background: rgba(37,99,235,0.06); }
+
+  .theme-wrap{ display:flex; align-items:center; gap:0.5rem; }
   .theme-label{ font-size:0.85rem; color:var(--muted); }
-  .theme-switch{ position:relative; width:46px; height:26px; display:inline-block; }
+  .theme-switch{ position:relative; width:44px; height:24px; display:inline-block; }
   .theme-switch input{ opacity:0; width:0; height:0; }
   .slider{ position:absolute; cursor:pointer; inset:0; background:#cbd5e1; border-radius:30px; transition:background .18s; box-shadow: inset 0 1px 2px rgba(0,0,0,0.08); }
-  .slider:before{ content:""; position:absolute; left:3px; top:3px; width:20px; height:20px; background:white; border-radius:50%; transition:transform .18s; }
-  input:checked + .slider{ background:linear-gradient(90deg,var(--accent), #ffb86b); }
+  .slider:before{ content:""; position:absolute; left:3px; top:2px; width:18px; height:18px; background:white; border-radius:50%; transition:transform .18s; }
+  input:checked + .slider{ background: linear-gradient(90deg,var(--accent), var(--accent-2)); }
   input:checked + .slider:before{ transform: translateX(20px); }
 
-  /* 가챠 레이아웃 */
-  .container{ max-width:960px; margin:2rem auto; padding:1rem; display:flex; gap:1.25rem; align-items:flex-start; }
-  .card-area{ flex:1; display:flex; justify-content:center; align-items:center; min-height:18rem; }
-  .card{ width:13.75rem; height:18.75rem; border-radius:0.75rem; background:linear-gradient(180deg,var(--card), #071018); display:flex; align-items:center; justify-content:center; font-size:2.25rem; color:#fff; box-shadow:0 12px 36px rgba(0,0,0,0.6); transition:transform .25s ease; }
-  .card.flare{ animation:flipIn 900ms cubic-bezier(.2,.9,.3,1); }
-  @keyframes flipIn{ 0%{transform:rotateX(90deg) scale(.6);opacity:0}60%{transform:rotateX(-10deg) scale(1.03);opacity:1}100%{transform:rotateX(0) scale(1)} }
-  .controls{ width:18rem; min-width:18rem; display:flex; flex-direction:column; gap:0.75rem; }
-  .controls button{ padding:0.9rem 1rem; border-radius:0.6rem; border:0; font-weight:800; cursor:pointer; font-size:1rem; }
-  .btn-gacha{ background:linear-gradient(90deg,var(--accent),#ffb86b); color:#071018; }
-  .btn-reset{ background:#1b1f2a; color:#cfe9ff; }
-  .log{ margin-top:0.75rem; background:rgba(255,255,255,0.03); padding:0.75rem; border-radius:0.6rem; font-size:0.95rem; max-height:14rem; overflow:auto; color:var(--text, #eaf6ff); }
+  /* 본문 */
+  main{ max-width:960px; margin:1.75rem auto; padding:1rem; }
+  h1{ margin:0 0 0.5rem 0; font-size:1.35rem; color:var(--accent); }
+  p{ line-height:1.8; color:var(--text); margin:0 0 1rem 0; }
 
-  .rarity-SSR{ background:linear-gradient(180deg,#ffd166,#ffb86b); color:#071018; }
-  .rarity-SR{ background:linear-gradient(180deg,#7cf6ff,#4bbfd9); color:#071018; }
-  .rarity-R{ background:linear-gradient(180deg,#d7d9df,#9aa0ab); color:#071018; }
-
-  @media(max-width:820px){
-    .container{ flex-direction:column; align-items:center; }
-    .controls{ width:100%; min-width:0; }
+  /* 반응형 숨김 */
+  @media(max-width:720px){
+    .brand .title{ display:none; }
+    .user .role{ display:none; }
   }
 </style>
 </head>
 <body>
-
 <header class="header">
   <div class="header-top">
     <a class="brand" href="index.html">
-      <img src="https://ibb.co/ZrgK1DJ" alt="로고">
+      <img src="https://ibb.co/ZrgK1DJ" alt="사이트 로고">
       <span class="title">자쿠드</span>
     </a>
+
+    <div class="user" role="navigation" aria-label="유저 정보">
+      <span class="role">칭호</span>
+      <span class="name">닉네임</span>
+      <span class="sp">10,857 SP</span>
+      <button type="button">로그아웃</button>
+    </div>
+  </div>
+
+  <div class="header-nav">
+    <div class="nav-left">
+      <!-- 메인 링크 제거. 가챠만 노출 -->
+      <a href="gacha.html" class="active">가챠</a>
+    </div>
 
     <div style="display:flex;align-items:center;gap:1rem;">
       <div class="theme-wrap" aria-hidden="false">
@@ -90,38 +110,17 @@
           <span class="slider"></span>
         </label>
       </div>
-
-      <div class="user">
-        <span class="role">칭호</span>
-        <span class="name">닉네임</span>
-        <span class="sp">10,857 SP</span>
-        <button type="button">로그아웃</button>
-      </div>
     </div>
   </div>
-
-  <nav class="header-nav" aria-label="메뉴">
-    <a href="index.html">메인</a>
-    <a href="gacha.html" class="active">가챠</a>
-  </nav>
 </header>
 
 <main>
-  <div class="container">
-    <div class="card-area">
-      <div id="card" class="card">?</div>
-    </div>
-
-    <div class="controls">
-      <button id="pullBtn" class="btn-gacha">한 번 뽑기</button>
-      <button id="resetBtn" class="btn-reset">로그 초기화</button>
-      <div class="log" id="log"></div>
-    </div>
-  </div>
+  <h1>왜 자쿠드를 숭배해야 하는가</h1>
+  <p>여기에 숭배글을 적어라. UI가 적절한 크기로 줄어들고 다크 모드 토글이 두 번째 행에 있다.</p>
 </main>
 
-<script type="module">
-  // 테마 토글 로직 (index.html과 동일)
+<script>
+  // 테마 토글 로직: localStorage 사용
   (function(){
     const toggle = document.getElementById('themeToggle');
     const apply = (t) => {
@@ -140,56 +139,6 @@
       apply(next);
     });
   })();
-
-  // 가챠 로직 (기존)
-  const POOL = [
-    { id:'A', name:'자쿠드-전설', rarity:'SSR', weight:1 },
-    { id:'B', name:'자쿠드-희귀', rarity:'SR', weight:6 },
-    { id:'C', name:'자쿠드-일반', rarity:'R', weight:93 }
-  ];
-
-  const cardEl = document.getElementById('card');
-  const pullBtn = document.getElementById('pullBtn');
-  const resetBtn = document.getElementById('resetBtn');
-  const logEl = document.getElementById('log');
-
-  function weightedDraw(pool){
-    const total = pool.reduce((s,p)=>s+p.weight,0);
-    let r = Math.random()*total;
-    for(const p of pool){ r-=p.weight; if(r<=0) return p; }
-    return pool[pool.length-1];
-  }
-
-  function showResult(p){
-    cardEl.className = 'card flare';
-    cardEl.textContent = p.name;
-    cardEl.classList.remove('rarity-SSR','rarity-SR','rarity-R');
-    cardEl.classList.add('rarity-' + p.rarity);
-  }
-
-  function appendLog(text){
-    const d = new Date();
-    const line = document.createElement('div');
-    line.textContent = `[${d.toLocaleTimeString()}] ${text}`;
-    logEl.prepend(line);
-  }
-
-  pullBtn.addEventListener('click', async ()=>{
-    pullBtn.disabled = true;
-    pullBtn.textContent = '연출중...';
-    cardEl.className = 'card';
-    cardEl.textContent = '...';
-    await new Promise(r=>setTimeout(r, 800));
-    const res = weightedDraw(POOL);
-    showResult(res);
-    appendLog(`${res.rarity} 획득: ${res.name}`);
-    pullBtn.disabled = false;
-    pullBtn.textContent = '한 번 뽑기';
-  });
-
-  resetBtn.addEventListener('click', ()=>{ logEl.innerHTML=''; appendLog('로그 초기화됨'); });
-  appendLog('가챠 준비 완료');
 </script>
-
 </body>
 </html>
