--- a/gacha.html
+++ b/gacha.html
@@ -3,64 +3,46 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>자쿠드 숭배 - 메인</title>
+<title>가챠</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700;900&display=swap" rel="stylesheet">
 
 <style>
-  /* UI 크기: 100% (이전 150%의 2/3) */
   html { font-size:100%; transition: background .18s, color .18s; }
   :root{
-    --bg:#f7fafc;
+    --bg:#f4f7fb;
     --card-bg:#ffffff;
-    --line:#e5e7eb;
     --accent:#2563eb;
     --accent-2:#ffb86b;
-    --text:#111827;
     --muted:#6b7280;
-    --header-shadow: rgba(0,0,0,0.04);
+    --shadow: rgba(10,20,40,0.12);
   }
   html.dark{
     --bg:#071018;
     --card-bg:#0b1724;
-    --line:#12202a;
     --accent:#ffd166;
     --accent-2:#ffb86b;
-    --text:#eaf6ff;
     --muted:#9aa0ab;
-    --header-shadow: rgba(255,255,255,0.03);
+    --shadow: rgba(0,0,0,0.45);
   }
 
-  body{
-    margin:0;
-    font-family:"Noto Sans KR",system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;
-    color:var(--text);
-    background:var(--bg);
-  }
+  body{ margin:0; font-family:"Noto Sans KR",system-ui,Arial; background:var(--bg); color:var(--text, #111); }
 
-  /* 헤더: 2단, 상단 고정 */
-  .header{ position:sticky; top:0; z-index:1000; background:var(--card-bg); box-shadow:0 1px 0 var(--header-shadow); transition:background .18s; }
+  /* 헤더 동일 구조 */
+  .header{ position:sticky; top:0; z-index:1000; background:var(--card-bg); box-shadow:0 1px 0 rgba(0,0,0,0.04); transition:background .18s; }
   .header-top{ display:flex; align-items:center; justify-content:space-between; padding:0.9rem 1.25rem; gap:0.75rem; }
-  .brand{ display:flex; align-items:center; gap:0.65rem; text-decoration:none; color:var(--text); }
+  .brand{ display:flex; align-items:center; gap:0.65rem; text-decoration:none; color:var(--text, #111); }
   .brand img{ width:3rem; height:3rem; object-fit:contain; border-radius:6px; }
-  .brand .title{ font-size:1.15rem; font-weight:900; letter-spacing:-0.02em; }
+  .brand .title{ font-size:1.15rem; font-weight:900; }
 
   .user{ display:flex; align-items:center; gap:0.9rem; font-size:0.92rem; }
-  .user .role{ color:var(--muted); font-weight:600; }
-  .user .name{ font-weight:800; }
-  .user .sp{ font-weight:800; color:var(--accent); padding:0.2rem 0.45rem; border-radius:0.45rem; border:1px solid rgba(0,0,0,0.04); background:transparent; }
-  html.dark .user .sp{ border:1px solid rgba(255,255,255,0.04); }
 
-  .user button{ padding:0.35rem 0.6rem; border:0; border-radius:0.45rem; background:var(--text); color:var(--card-bg); cursor:pointer; font-weight:700; }
-
-  /* 2번째 행: 네비 + 다크 스위치 (토글 이곳으로 이동) */
-  .header-nav{ display:flex; align-items:center; justify-content:space-between; gap:0.5rem; padding:0.5rem 1.25rem; border-top:1px solid var(--line); }
+  .header-nav{ display:flex; align-items:center; justify-content:space-between; gap:0.5rem; padding:0.5rem 1.25rem; border-top:1px solid var(--line, #eef2f7); }
   .nav-left{ display:flex; gap:0.9rem; align-items:center; }
   .nav-left a{ text-decoration:none; color:var(--muted); font-weight:700; padding:0.35rem 0.6rem; border-radius:0.45rem; }
   .nav-left a.active{ color:var(--accent); background: rgba(37,99,235,0.06); }
 
   .theme-wrap{ display:flex; align-items:center; gap:0.5rem; }
-  .theme-label{ font-size:0.85rem; color:var(--muted); }
   .theme-switch{ position:relative; width:44px; height:24px; display:inline-block; }
   .theme-switch input{ opacity:0; width:0; height:0; }
   .slider{ position:absolute; cursor:pointer; inset:0; background:#cbd5e1; border-radius:30px; transition:background .18s; box-shadow: inset 0 1px 2px rgba(0,0,0,0.08); }
@@ -68,27 +50,61 @@
   input:checked + .slider{ background: linear-gradient(90deg,var(--accent), var(--accent-2)); }
   input:checked + .slider:before{ transform: translateX(20px); }
 
-  /* 본문 */
-  main{ max-width:960px; margin:1.75rem auto; padding:1rem; }
-  h1{ margin:0 0 0.5rem 0; font-size:1.35rem; color:var(--accent); }
-  p{ line-height:1.8; color:var(--text); margin:0 0 1rem 0; }
+  /* 가챠 화면 레이아웃 개선 */
+  .wrap{ max-width:1100px; margin:1.5rem auto; padding:1rem; display:flex; gap:1rem; align-items:flex-start; }
+  .left{ flex:1; min-width:320px; display:flex; flex-direction:column; gap:1rem; align-items:center; }
 
-  /* 반응형 숨김 */
-  @media(max-width:720px){
-    .brand .title{ display:none; }
-    .user .role{ display:none; }
+  .card-wrap{
+    width:360px; height:480px; border-radius:14px; overflow:hidden;
+    background: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(0,0,0,0.02));
+    box-shadow: 0 18px 40px var(--shadow);
+    display:flex; align-items:center; justify-content:center; position:relative;
+  }
+
+  .card{
+    width:84%; height:78%; border-radius:10px; display:flex; align-items:center; justify-content:center;
+    font-size:1.6rem; font-weight:900; color:#071018; text-align:center; padding:0.5rem;
+    transition:transform .28s cubic-bezier(.2,.9,.3,1);
+    background: linear-gradient(180deg,#ffd166,#ffb86b);
+  }
+  .card.sr{ background: linear-gradient(180deg,#7cf6ff,#4bbfd9); color:#071018; }
+  .card.r{ background: linear-gradient(180deg,#d7d9df,#9aa0ab); color:#071018; }
+
+  .card-placeholder{ font-size:1.1rem; color:var(--muted); position:absolute; top:12px; left:12px; }
+
+  .right{ width:320px; display:flex; flex-direction:column; gap:0.9rem; }
+  .controls{ display:flex; flex-direction:column; gap:0.6rem; }
+  .btn{
+    padding:0.9rem 1rem; border-radius:10px; border:0; font-weight:900; cursor:pointer; font-size:1rem;
+  }
+  .btn-pull{ background: linear-gradient(90deg,var(--accent), var(--accent-2)); color:#071018; box-shadow:0 10px 24px rgba(0,0,0,0.12); }
+  .btn-reset{ background:transparent; color:var(--muted); border:1px solid rgba(0,0,0,0.06); }
+
+  .meta{ background:var(--card-bg); border-radius:10px; padding:0.75rem; box-shadow:0 8px 22px var(--shadow); font-size:0.95rem; }
+  .meta .row{ display:flex; justify-content:space-between; margin-bottom:0.35rem; color:var(--muted); }
+  .meta .value{ font-weight:800; color:var(--text, #111); }
+
+  .log{ background:transparent; max-height:260px; overflow:auto; padding:0.6rem; border-radius:8px; font-size:0.95rem; color:var(--muted); }
+  .log .entry{ margin-bottom:0.6rem; background: rgba(0,0,0,0.03); padding:0.55rem; border-radius:8px; color:var(--text, #111); }
+
+  /* 작은 화면에서 세로 배치 */
+  @media(max-width:920px){
+    .wrap{ flex-direction:column; align-items:center; padding:1rem; }
+    .right{ width:100%; }
+    .card-wrap{ width:88%; height:420px; }
   }
 </style>
 </head>
 <body>
+
 <header class="header">
   <div class="header-top">
     <a class="brand" href="index.html">
-      <img src="https://ibb.co/ZrgK1DJ" alt="사이트 로고">
+      <img src="https://ibb.co/ZrgK1DJ" alt="로고">
       <span class="title">자쿠드</span>
     </a>
 
-    <div class="user" role="navigation" aria-label="유저 정보">
+    <div class="user">
       <span class="role">칭호</span>
       <span class="name">닉네임</span>
       <span class="sp">10,857 SP</span>
@@ -98,7 +114,6 @@
 
   <div class="header-nav">
     <div class="nav-left">
-      <!-- 메인 링크 제거. 가챠만 노출 -->
       <a href="gacha.html" class="active">가챠</a>
     </div>
 
@@ -115,30 +130,156 @@
 </header>
 
 <main>
-  <h1>왜 자쿠드를 숭배해야 하는가</h1>
-  <p>여기에 숭배글을 적어라. UI가 적절한 크기로 줄어들고 다크 모드 토글이 두 번째 행에 있다.</p>
+  <div class="wrap">
+    <div class="left">
+      <div class="card-wrap">
+        <div class="card-placeholder">연출 위치</div>
+        <div id="card" class="card">?</div>
+      </div>
+      <div style="width:360px; max-width:88%; display:flex; justify-content:center; gap:0.6rem;">
+        <div style="background:transparent; color:var(--muted); font-size:0.9rem; text-align:center;">
+          확률: <strong class="value">SSR 1% / SR 6% / R 93%</strong>
+        </div>
+      </div>
+    </div>
+
+    <div class="right">
+      <div class="controls">
+        <button id="pullBtn" class="btn btn-pull">한 번 뽑기</button>
+        <button id="resetBtn" class="btn btn-reset">로그 초기화</button>
+      </div>
+
+      <div class="meta">
+        <div class="row"><div>총 뽑기</div><div class="value" id="count">0</div></div>
+        <div class="row"><div>SSR 횟수</div><div class="value" id="ssrCount">0</div></div>
+        <div class="row"><div>SR 횟수</div><div class="value" id="srCount">0</div></div>
+        <div class="row"><div>R 횟수</div><div class="value" id="rCount">0</div></div>
+      </div>
+
+      <div class="log" id="log"></div>
+    </div>
+  </div>
 </main>
 
-<script>
-  // 테마 토글 로직: localStorage 사용
+<script type="module">
+  // 테마 토글 공통 로직
   (function(){
     const toggle = document.getElementById('themeToggle');
     const apply = (t) => {
       if(t === 'dark') document.documentElement.classList.add('dark');
       else document.documentElement.classList.remove('dark');
-      toggle.checked = (t === 'dark');
+      if(toggle) toggle.checked = (t === 'dark');
     };
-
     const saved = localStorage.getItem('theme');
     const initial = saved || (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
     apply(initial);
-
-    toggle.addEventListener('change', () => {
-      const next = toggle.checked ? 'dark' : 'light';
-      localStorage.setItem('theme', next);
-      apply(next);
-    });
+    if(toggle){
+      toggle.addEventListener('change', () => {
+        const next = toggle.checked ? 'dark' : 'light';
+        localStorage.setItem('theme', next);
+        apply(next);
+      });
+    }
   })();
+
+  // 가챠 로직 + UI
+  const POOL = [
+    { id:'A', name:'자쿠드-전설', rarity:'SSR', weight:1 },
+    { id:'B', name:'자쿠드-희귀', rarity:'SR', weight:6 },
+    { id:'C', name:'자쿠드-일반', rarity:'R', weight:93 }
+  ];
+
+  const cardEl = document.getElementById('card');
+  const pullBtn = document.getElementById('pullBtn');
+  const resetBtn = document.getElementById('resetBtn');
+  const logEl = document.getElementById('log');
+  const countEl = document.getElementById('count');
+  const ssrEl = document.getElementById('ssrCount');
+  const srEl = document.getElementById('srCount');
+  const rEl = document.getElementById('rCount');
+
+  let stats = { total:0, ssr:0, sr:0, r:0 };
+
+  function weightedDraw(pool){
+    const total = pool.reduce((s,p)=>s+p.weight,0);
+    let r = Math.random()*total;
+    for(const p of pool){ r-=p.weight; if(r<=0) return p; }
+    return pool[pool.length-1];
+  }
+
+  function showResult(p){
+    // 애니메이션: scale & pop
+    cardEl.style.transform = 'scale(0.9)';
+    void cardEl.offsetWidth;
+    cardEl.style.transform = 'scale(1)';
+    cardEl.textContent = p.name;
+    cardEl.className = 'card';
+    if(p.rarity === 'SSR') cardEl.classList.add('sr'); // will be replaced
+    if(p.rarity === 'SR') cardEl.classList.add('sr');
+    if(p.rarity === 'R') cardEl.classList.add('r');
+    // apply specific style for SSR
+    if(p.rarity === 'SSR') {
+      cardEl.style.background = 'linear-gradient(180deg,#ffd166,#ffb86b)';
+      cardEl.style.color = '#071018';
+    } else if(p.rarity === 'SR') {
+      cardEl.style.background = 'linear-gradient(180deg,#7cf6ff,#4bbfd9)';
+      cardEl.style.color = '#071018';
+    } else {
+      cardEl.style.background = 'linear-gradient(180deg,#d7d9df,#9aa0ab)';
+      cardEl.style.color = '#071018';
+    }
+  }
+
+  function appendLog(text){
+    const d = new Date();
+    const line = document.createElement('div');
+    line.className = 'entry';
+    line.textContent = `[${d.toLocaleTimeString()}] ${text}`;
+    logEl.prepend(line);
+  }
+
+  function updateStats(rarity){
+    stats.total += 1;
+    if(rarity === 'SSR') stats.ssr += 1;
+    if(rarity === 'SR') stats.sr += 1;
+    if(rarity === 'R') stats.r += 1;
+    countEl.textContent = stats.total;
+    ssrEl.textContent = stats.ssr;
+    srEl.textContent = stats.sr;
+    rEl.textContent = stats.r;
+  }
+
+  pullBtn.addEventListener('click', async ()=>{
+    pullBtn.disabled = true;
+    pullBtn.textContent = '연출중...';
+    // 초기 연출(플레이스홀더)
+    cardEl.textContent = '연출 중…';
+    cardEl.style.background = 'linear-gradient(180deg, rgba(0,0,0,0.06), rgba(0,0,0,0.02))';
+    await new Promise(r=>setTimeout(r, 900));
+
+    const res = weightedDraw(POOL);
+    showResult(res);
+    updateStats(res.rarity);
+    appendLog(`${res.rarity} 획득: ${res.name}`);
+
+    pullBtn.disabled = false;
+    pullBtn.textContent = '한 번 뽑기';
+  });
+
+  resetBtn.addEventListener('click', ()=>{
+    stats = { total:0, ssr:0, sr:0, r:0 };
+    countEl.textContent = '0';
+    ssrEl.textContent = '0';
+    srEl.textContent = '0';
+    rEl.textContent = '0';
+    logEl.innerHTML = '';
+    cardEl.textContent = '?';
+    cardEl.style.background = '';
+    appendLog('로그 초기화됨');
+  });
+
+  appendLog('가챠 준비 완료');
 </script>
+
 </body>
 </html>
